CRUD and documentation, model,controller,seeder,factory,views
